Make use of JDK-16 GA